<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oackcliffsoftworks.sixcheckboxes.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="1.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/instructionsText"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".75"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/ChBox1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cBoxText1"
            />
        <CheckBox
            android:id="@+id/ChBox2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cBoxText2"
            />
        <CheckBox
            android:id="@+id/ChBox3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cBoxText3"
            />
        <CheckBox
            android:id="@+id/ChBox4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cBoxText4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">


            <Button
                android:id="@+id/ButtonDisplay"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:textSize="12sp"
                android:background="@color/colorButton"
                android:text="@string/buttonText"
                android:textStyle="bold"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <TextView
                android:id="@+id/DispalyResults"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>